--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(GenerateIntrinsicmis)
 export(Generatetestid)
 export(HeterVarianceEstimate)
 export(calibration)
+export(crosstaub)
 export(dicestiamte)
 export(ebestimate)
 export(eblaplace)
