--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(Generatetestid)
 export(HeterVarianceEstimate)
 export(calibration)
 export(crosstaub)
+export(crosstaub_new)
 export(dicestiamte)
 export(ebestimate)
 export(eblaplace)
