--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,6 @@ export(dicestiamte)
 export(ebestimate)
 export(eblaplace)
 export(tree_function)
+export(two_data_two_stage_fixed)
+export(two_data_two_stage_random)
+export(two_stage_random)
