two_stage_model_data_analysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ export(crosstaub_new)
 export(dicestiamte)
 export(ebestimate)
 export(eblaplace)
+export(standard_analysis)
 export(tree_function)
+export(two_data_standard_anlysis)
 export(two_data_two_stage_fixed)
 export(two_data_two_stage_random)
 export(two_stage_random)
