--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(GenerateCoeff)
 export(GenerateIntrinsicmis)
 export(Generatetestid)
 export(HeterVarianceEstimate)
+export(HeterVarianceEstimateNew)
 export(calibration)
 export(crosstaub)
 export(crosstaub_new)
